--- a/1. Gallery/styles case.css
+++ b/1. Gallery/styles case.css
@@ -12,6 +12,13 @@ header {
     background-color: rgb(236, 236, 236);
 }
 
+.container {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 20px 20px 20px;
+    z-index: 9999;
+}
+
 nav {
 display: flex;
 justify-content: space-between;
@@ -35,6 +42,7 @@ footer {
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+    padding: 0 20px 20px 20px;
 }
 
 .subtitle {
