--- a/styles index.css
+++ b/styles index.css
@@ -41,6 +41,7 @@ border-bottom: 1px solid #040404;
     max-width: 980px;
     margin-left: auto;
     margin-right: auto;
+    padding: 0 20px 20px 20px;
 }
 
 
