--- a/1. Gallery/styles case.css
+++ b/1. Gallery/styles case.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Kanchenjunga", sans-serif;
+    font-family: "Rubik", sans-serif;
     margin: 0;
     padding: 0;
     background-color: rgb(252, 252, 252);
